@@ -1,3 +1,7 @@
+2005-01-26  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (same_handle_p): added debugging infrastructure
+
 2005-01-22  Bruno Haible  <bruno@clisp.org>
 
 	* init.lisp (in-package): Execute at compile-time only if it occurs
